# clifier

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
clifier/: __init__.py  clifier.py
clifier/examples/: cli.yaml  example.py
src/clifier/: clifier.py
src/clifier.egg-info/: PKG-INFO  SOURCES.txt
