[metadata]
version=0.0.1dev41
name = clifier
author = Iuliia Volkova
url = https://github.com/xnuinside/clifier
long_description = file:README.rst
email = xnuinside@gmail.com
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[bdist_wheel]
universal = 1

[options]
include_package_data = True
package_dir =
    = src
packages =
    clifier
zip_safe = False
